hphp/test/slow/php7_backported/ns_094.php.expectf

Fatal error: An expression is expected here. in %s/ns_094.php on line 9
